Updates to enable demo mode.

--- a/stage2/03-corvex-adds/userfiles/localconfig.tmpl
+++ b/stage2/03-corvex-adds/userfiles/localconfig.tmpl
@@ -4,4 +4,7 @@ localcommands = uploadObject
 [subscriber]
 subscriberid = SUBSCRIBERID
 locationid = LOCATIONID
+gatewayName = GATEWAYNAME
+gatewayServer = 1
 uploadPath = /var/www/html/uploads
+version = 1.9.6
