--- a/stage2/03-corvex-adds/userfiles/config.tmpl
+++ b/stage2/03-corvex-adds/userfiles/config.tmpl
@@ -2,6 +2,9 @@
 
 subscriber=SUBSCRIBERID
 location=LOCATIONID
-gatewayName = GATEWAYNAME
+gatewayName=GATEWAYNAME
 port=10022
 watchdir=/var/www/html/uploads
+backendHost=BACKENDHOST
+frontendHost=FRONTENDHOST
+frontendPath=FRONTENDPATH
