--- a/stage2/03-corvex-adds/userfiles/localconfig.tmpl
+++ b/stage2/03-corvex-adds/userfiles/localconfig.tmpl
@@ -1,5 +1,5 @@
 [project]
-localcommands = uploadObject
+localCommands = uploadObject, getVersion
 
 [subscriber]
 subscriberid = SUBSCRIBERID
@@ -7,4 +7,3 @@ locationid = LOCATIONID
 gatewayName = GATEWAYNAME
 gatewayServer = 1
 uploadPath = /var/www/html/uploads
-version = 1.9.6
