Updated to use configurable port for tunnel.

--- a/stage2/03-corvex-adds/userfiles/config.tmpl
+++ b/stage2/03-corvex-adds/userfiles/config.tmpl
@@ -6,5 +6,6 @@ gatewayName=GATEWAYNAME
 port=10022
 watchdir=/var/www/html/uploads
 backendHost=BACKENDHOST
+backendPath=BACKENDPATH
 frontendHost=FRONTENDHOST
 frontendPath=FRONTENDPATH
