--- a/stage2/03-corvex-adds/userfiles/localconfig.tmpl
+++ b/stage2/03-corvex-adds/userfiles/localconfig.tmpl
@@ -1,5 +1,7 @@
 [project]
 localCommands = uploadObject, getVersion
+dbhost = 127.0.0.1
+dbport = 13306
 
 [subscriber]
 subscriberid = SUBSCRIBERID
