--- a/stage2/03-corvex-adds/userfiles/localconfig.tmpl
+++ b/stage2/03-corvex-adds/userfiles/localconfig.tmpl
@@ -1,5 +1,5 @@
 [project]
-localCommands = uploadObject, getVersion
+localCommands = uploadObject, getVersion, getObject
 dbhost = 127.0.0.1
 dbport = 13306
 
@@ -9,3 +9,4 @@ locationid = LOCATIONID
 gatewayName = GATEWAYNAME
 gatewayServer = 1
 uploadPath = /var/www/html/uploads
+objectPath = /var/www/html/objects
