changed monitoring server name

--- a/stage2/04-corvex/userfiles/config.tmpl
+++ b/stage2/04-corvex/userfiles/config.tmpl
@@ -4,7 +4,7 @@
 tunnelUser=ccs
 tunnelServer=db1.corvexconnected.com
 # server that does nagios monitoring
-monitoring=nagios.corvexconnected.com
+monitoring=monitoring.corvexconnected.com
 
 # configured by the provisioning script
 subscriber=SUBSCRIBERID
