added nagios scripts

--- a/stage2/04-corvex/userfiles/localconfig.tmpl
+++ b/stage2/04-corvex/userfiles/localconfig.tmpl
@@ -2,6 +2,8 @@
 localCommands = uploadObject, getVersion, getObject
 dbhost = 127.0.0.1
 dbport = 13306
+slowCommandThreshold = 2
+servicehost = localhost:8080
 
 [subscriber]
 subscriberid = SUBSCRIBERID
@@ -10,3 +12,5 @@ gatewayName = GATEWAYNAME
 gatewayServer = 1
 uploadPath = /var/www/html/uploads
 objectPath = /var/www/html/objects
+logoPath = logo.png
+appUrl = http://IPADDRESS/corvex.apk
