added redirection control

--- a/stage2/04-corvex/userfiles/localconfig.tmpl
+++ b/stage2/04-corvex/userfiles/localconfig.tmpl
@@ -12,5 +12,7 @@ gatewayName = GATEWAYNAME
 gatewayServer = 1
 uploadPath = /var/www/html/uploads
 objectPath = /var/www/html/objects
+objectRedirect = 1
+objectBase = /objects
 logoPath = logo.png
 appUrl = http://IPADDRESS/corvex.apk
