initial cut at not including apache

--- a/stage2/04-corvex/userfiles/localconfig.tmpl
+++ b/stage2/04-corvex/userfiles/localconfig.tmpl
@@ -3,7 +3,9 @@ localCommands = uploadObject, getVersion, getObject
 dbhost = 127.0.0.1
 dbport = 13306
 slowCommandThreshold = 2
-servicehost = localhost:8080
+servicehost = localhost:120SUBSCRIBERID
+servicepath = scripts
+isRemote = 1
 
 [subscriber]
 subscriberid = SUBSCRIBERID
